--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "webpack-cli": "3.3.10",
     "webpack-dev-server": "3.10.1"
   },
+  "dependencies": {
+    "prop-types": "15.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
+  },
   "engines": {
     "node": "10"
   }
