--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@babel/preset-env": "7.8.3",
     "@babel/preset-react": "7.8.3",
     "babel-loader": "8.0.6",
+    "css-loader": "^5.0.0",
     "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.18.0",
+    "file-loader": "^6.1.1",
+    "style-loader": "^2.0.0",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.10",
     "webpack-dev-server": "3.10.1"
   },
   "dependencies": {
+    "leaflet": "^1.7.1",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
